# pypi-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: cron-event.yml  cron.yml
changelog_data/: serials.json
pypi_data_downloader/: __main__.py  cli.py
release_data/: serials.json
release_data/0/: 0.0.1.json  0.618.json  0.json
release_data/0/-/: 0-._.-._.-._.-._.-._.-._.-0.json  0-core-client.json  0-orchestrator.json
release_data/0/0/: 000.json  00000a.json  00print_lol.json  00smalinux.json
release_data/1/: 1.json
release_data/2/: 2.5d.json
release_data/3/: 3.json
release_data/4/: 4.json
release_data/5/: 5.json
release_data/6/: 6.json
release_data/7/: 7.json
release_data/8/: 8.json
release_data/9/: 9.json
release_data/a/: a.i.json  a.json
release_data/b/: b.a.json  b.json  b.py.json
release_data/c/: c.json
release_data/d/: d.json
release_data/e/: e.calc.json  e.json  e.pdfminer.six.json  e.s.p.-hadouken.json
release_data/f/: f.json
release_data/g/: g.json
release_data/h/: h.json  h.py.json
release_data/i/: i.json
release_data/j/: j.json  j.osh.json
release_data/k/: k.json
release_data/l/: l.json
release_data/m/: m.json
release_data/n/: n.json
release_data/o/: o.json
release_data/p/: p.json  p.url.json
release_data/q/: q.json
release_data/s/: s.fhimiancaculator.json  s.json
release_data/t/: t.json
release_data/u/: u.json
release_data/v/: v.json
release_data/w/: w.i.l.l.json  w.json
release_data/x/: x.json
release_data/z/: z.entry.json
(+416674 files in other folders)
