[tool.poetry]
name = "pypi-data-downloader"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom.forbes@onfido.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
backoff = "^2.1.2"
tqdm = "^4.64.0"
requests-cache = "^0.9.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.scripts]
pypi_data_downloader = "pypi_data_downloader.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
